--- a/buptYB/css/calendar.css
+++ b/buptYB/css/calendar.css
@@ -193,6 +193,385 @@ span:hover {
     border: 2px solid transparent;
     border-radius: 50%;
     display: inline-block;
+    height: 52px;
+    line-height: 52px;
+    text-align: center;
+    width: 52px;
+}
+
+.current-day {
+    background: #c0392b;
+    color: #f9f9f9;
+}
+
+.event {
+    cursor: pointer;
+    position: relative;
+}
+
+.event:after {
+    background: #c0392b;
+    border-radius: 50%;
+    bottom: 8px;
+    display: block;
+    content: '';
+    height: 8px;
+    left: 50%;
+    margin: -4px 0 0 -4px;
+    position: absolute;
+    width: 8px;
+}
+
+.event.current-day:after {
+    background: #f9f9f9;
+}
+
+.list {
+    margin:0 auto;
+    text-align: center;
+    position:relative;
+    max-width:452px;
+    margin-top:0;
+}
+
+.close {
+    color: #A4AAAB;
+    margin-top: -15px;
+    margin-right: 10px;
+    float: right;
+    cursor: pointer;
+}
+
+.day-event {
+    background-color: rgba(152, 206, 55, 0.3);
+    width: 100%;
+    height:410px;
+    overflow-y:hidden; 
+    padding-top: 20px;
+    padding-bottom: 0px;
+    display:none;
+
+}
+
+.day-event p{
+    text-indent:0!important;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+    text-align: left;
+}
+ p.date{
+    font-weight: 500;
+    text-align: center;
+}
+.day-event span{
+    font-size: 12px;
+}
+
+.day-event button {
+    position: relative;
+    vertical-align: top;
+    width: 100%;
+    height: 50px;
+    padding: 0;
+    font-size: 18px;
+    color: white;
+    text-align: center;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+    background: #c0392b;
+    border: 0;
+    border-bottom: 2px solid #b53224;
+    cursor: pointer;
+    -webkit-box-shadow: inset 0 -2px #b53224;
+    box-shadow: inset 0 -2px #b53224;
+}
+
+.check-btn {
+    width: 100%;
+}
+span:hover {
+    background-color:#c0392b;
+}
+
+.print-btn {
+    padding: 1px 14px 5px 14px;
+}
+    
+}
+
+
+
+
+
+
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 480px) {
+/* STYLES GO HERE */
+}
+ 
+/* Smartphones (landscape) ----------- */
+@media only screen
+and (min-width : 321px) {
+/* STYLES GO HERE */
+}
+ 
+/* Smartphones (portrait) ----------- */
+@media only screen
+and (max-width : 320px) {
+/* STYLES GO HERE */
+}
+ 
+/* iPads (portrait and landscape) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px) {
+/* STYLES GO HERE */
+}
+ 
+/* iPads (landscape) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : landscape) {
+/* STYLES GO HERE */
+}
+ 
+/* iPads (portrait) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : portrait) {
+/* STYLES GO HERE */
+}
+ 
+/* Desktops and laptops ----------- */
+@media only screen
+and (min-width : 1224px) {
+/* STYLES GO HERE */
+}
+ 
+/* Large screens ----------- */
+@media only screen
+and (min-width : 1824px) {
+/* STYLES GO HERE */
+}
+ 
+/* iPhone 5 (portrait & landscape)----------- */
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 568px) {
+/* STYLES GO HERE */
+}
+ 
+/* iPhone 5 (landscape)----------- */
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 568px)
+and (orientation : landscape) {
+/* STYLES GO HERE */
+}
+ 
+/* iPhone 5 (portrait)----------- */
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 568px)
+and (orientation : portrait) {
+/* STYLES GO HERE */
+=======
+@media (min-width:768px) {
+
+.calendar-container {
+    width:860px;
+	margin:40px auto 0 auto;
+}
+
+.calendar {
+
+    text-align: center;
+}
+.calendar table{    background-color: rgba(255, 255, 255, 0.7);    float: left;}
+.calendar header {
+    position: relative;
+}
+
+.calendar h2 {
+    text-transform: uppercase;
+}
+
+.calendar thead {
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.calendar tbody {
+    color: #7c8a95;
+}
+
+.calendar tbody td:hover {
+    border: 2px solid #c0392b;
+}
+
+.calendar tbody td.active {
+    border: 2px solid #c0392b;
+}
+
+.calendar td {
+    border: 2px solid transparent;
+    border-radius: 50%;
+    display: inline-block;
+    height: 64px;
+    line-height: 64px;
+    text-align: center;
+    width: 64px;
+}
+
+.current-day {
+    background: #c0392b;
+    color: #f9f9f9;
+}
+
+.event {
+    cursor: pointer;
+    position: relative;
+}
+
+.event:after {
+    background: #c0392b;
+    border-radius: 50%;
+    bottom: 8px;
+    display: block;
+    content: '';
+    height: 8px;
+    left: 50%;
+    margin: -4px 0 0 -4px;
+    position: absolute;
+    width: 8px;
+}
+
+.event.current-day:after {
+    background: #f9f9f9;
+}
+
+.list {
+    width:410px;
+    float: right;
+    margin-top: 10px;
+}
+
+.close {
+    color: #A4AAAB;
+    margin-top: -15px;
+    margin-right: 10px;
+    float: right;
+    cursor: pointer;
+}
+
+.day-event {
+    background-color: rgba(152, 206, 55, 0.3);
+    width: 100%;
+    height:410px;
+    overflow-y:hidden; 
+    padding-top: 20px;
+    padding-bottom: 0px;
+    display:none;
+
+}
+
+.day-event p{
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    text-align: left;
+}
+ p.date{
+    font-weight: 500;
+    text-align: center;
+}
+.day-event span{
+    font-size: 12px;
+}
+
+.day-event button {
+    position: relative;
+    vertical-align: top;
+    width: 100%;
+    height: 50px;
+    padding: 0;
+    font-size: 18px;
+    color: white;
+    text-align: center;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+    background: #c0392b;
+    border: 0;
+    border-bottom: 2px solid #b53224;
+    cursor: pointer;
+    -webkit-box-shadow: inset 0 -2px #b53224;
+    box-shadow: inset 0 -2px #b53224;
+}
+
+.check-btn {
+    width: 100%;
+}
+span:hover {
+    background-color:#c0392b;
+}
+
+.print-btn {
+    padding: 1px 14px 5px 14px;
+}
+
+}
+
+
+
+
+@media (max-width:767px) {
+.calendar-container {
+    max-width:767px;
+    text-align:center;
+	margin:20px auto 0 auto;
+}
+
+.calendar table{
+    position:relative;
+    margin:0 auto;
+    text-align: center;
+}
+.calendar table{    
+    background-color: rgba(255, 255, 255, 0.7);    
+}
+.calendar header {
+    position: relative;
+}
+
+.calendar h2 {
+    display:none;
+}
+
+.calendar thead {
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.calendar tbody {
+    color: #7c8a95;
+}
+
+.calendar tbody td:hover {
+    border: 2px solid #c0392b;
+}
+
+.calendar tbody td.active {
+    border: 2px solid #c0392b;
+}
+
+.calendar td {
+    border: 2px solid transparent;
+    border-radius: 50%;
+    display: inline-block;
     height: 64px;
     line-height: 64px;
     text-align: center;
