--- a/buptYB/css/style.css
+++ b/buptYB/css/style.css
@@ -11,7 +11,8 @@ ul {
   margin-top: 0;
 }
 #container{
-  padding:50px 0; 
+  padding-top:50px;
+  height:inherit;
 }
 .am-topbar-inverse {
     background-color: #363b3f;
@@ -78,15 +79,15 @@ ul {
   .my-article{
     padding: 10px;
     position: absolute;
-    width:90%;
-    left:3%;
+    width:100%;
+    left:0;
   }
 }
 #the-box{
   position: relative;
  	width: 100%;
  /* min-width: 500px;*/
-	height: 91%;
+	height: 100%;
   overflow: auto;
 }
 .yingxin-header {
